<resources>
    <string name="app_name">CarCompanion</string>
    <string name="car_companion">Car Companion</string>
    <string name="just_go_for_it">Just go for it...</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">GO</string>
    <string name="new_user_signup">New User? SignUp</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="carcompanion">Car Companion</string>
    <string name="car_companion1">car_companion</string>
    <string name="_123">$123</string>
    <string name="balance">balance</string>
    <string name="_12">12</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="booking">booking</string>
</resources>