<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="#fece2f">
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/fullname_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="@string/carcompanion"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_companion1"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:layout_toEndOf="@+id/profile_image"
            android:layout_below="@+id/fullname_field"
            android:layout_marginStart="10dp"
            tools:ignore="InvalidId" />
    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:layout_width="match_parent"
        android:padding="20dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardBackgroundColor="#fece2f"
            app:cardElevation="10dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/payment" />
                <TextView
                    android:fontFamily="@font/bungee"
                    android:id="@+id/payment_label"
                    android:includeFontPadding="false"
                    android:layout_marginTop="60dp"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/_123"
                    android:textSize="20sp" />
                <TextView
                    android:fontFamily="@font/bungee"
                    android:id="@+id/payment_desc"
                    android:includeFontPadding="false"
                    android:layout_below="@id/payment_label"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/balance"
                    android:textSize="20sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#fece2f"
            app:cardElevation="10dp"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:src="@drawable/booking1"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/Booking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="60dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/Booking2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booking"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/Booking"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>



    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/full_name"
            android:id="@+id/full_name_profile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/username1"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/email"
            android:id="@+id/email_profile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/phone"
            android:id="@+id/phone_no_profile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/password"
            android:id="@+id/password_profile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#fece2f"
            android:onClick="update"
            android:text="@string/update"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>
</LinearLayout>