<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <ImageView
        android:id="@+id/Logo_Image"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:transitionName="logo_image"
        android:src="@drawable/taxi2"/>

    <TextView
        android:id="@+id/Logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:transitionName="logo_text"
        android:text="@string/hello_there_welcome_back"
        android:textSize="40sp"
        android:textColor="#000"
        android:layout_marginTop="-20dp"/>
    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:fontFamily="@font/antic"
        android:transitionName="logo_desc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="username_tran"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:textColor="#000"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/Login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="button_tran"
            android:onClick="loginUser"/>
        <Button
            android:id="@+id/signup_screen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/new_user_signup"
            android:layout_gravity="center_horizontal"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:transitionName="login_signup_tran"/>
    </LinearLayout>

</LinearLayout>